<resources>
    <string name="app_name">Todo Yandex</string>
    <string name="new_todolist_item">Новое</string>
    <string name="high_priority_item">‼️ %1$s</string>
    <string name="medium_priority_item">%1$s</string>
    <string name="low_priority_item">⬇ %1$s</string>
    <string name="my_tasks">Мои дела</string>
    <string name="tasks_done_format">Выполнено — %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Сохранить</string>
    <string name="do_until">Сделать до</string>
    <string name="remove">Удалить</string>
    <string name="priority">Важность</string>
    <string name="no">Нет</string>
    <string name="low_priority_menu_item">Низкий</string>
    <string name="medium_priority_menu_item">Нет</string>
    <string name="high_priority_menu_item">!! Высокий</string>
    <string name="todo_item_text_hint">Что надо сделать…</string>
    <string name="select_date">ГОТОВО</string>
    <string name="dismiss">ОТМЕНА</string>
    <string name="error_happened">Произошла ошибка. Обновите список</string>
    <string name="refresh">Обновить</string>
    <string name="deletion_countdown">%1$sУдалить \"%2$s\"?</string>
    <string name="restore_deleted">Отмена</string>
    <string name="add_todo_item_content_description">Добавить дело</string>
    <string name="toggle_done">Изменить статус дела</string>
    <string name="about_content_description">О приложении</string>
    <string name="show_done">Показать сделанное</string>
    <string name="hide_done">Скрыть сделанное</string>
    <string name="back_without_saving">Вернуться без сохранения</string>
    <string name="remove_todo_content_description">Удалить дело</string>
    <string name="button_disabled">Недоступна</string>
    <string name="deadline_switch_content_description">Наличие срока выполнения</string>
    <string name="no_deadline_content_description">Без срока выполнения</string>
    <string name="not_chosen">Не выбрано</string>
    <string name="chosen">Выбрано</string>
    <string name="done_content_description">Сделано</string>
    <string name="undone_content_description">Не сделано</string>
    <string name="deadline_in_list">Крайний срок: %1$s</string>
    <string name="high_priority_content_desciption">Высокий</string>
    <string name="medium_priority_content_description">Средний</string>
    <string name="low_priority_content_description">Низкий</string>
    <string name="priority_content_description">Приоритет: %1$s</string>
    <string name="countdown_snackbar_content_description">Отменить удаление в течение пяти секунд</string>
    <string name="time_left_countdown">(%1$d с.)</string>
    <string name="deletion_announcement">Хотите отменить удаление?</string>
    <string name="cancel">Отменить</string>
    <plurals name="tasks_done_content_description">
        <item quantity="zero">Ни одно дело не выполнено</item>
        <item quantity="one">%1$d дело выполнено</item>
        <item quantity="two">%1$d дела выполнено</item>
        <item quantity="few">%1$d дела выполнено</item>
        <item quantity="many">%1$d дел выполнено</item>
        <item quantity="other">%1$d дел выполнено</item>
    </plurals>
</resources>